--- a/scheduler/css/tailwind.output.css
+++ b/scheduler/css/tailwind.output.css
@@ -154,6 +154,28 @@ select {
   text-transform: none
 }
 
+.filter {
+  border-radius: .25rem;
+  padding: .5rem 1.5rem;
+  line-height: 1.5;
+  cursor: default;
+  opacity: 0.5;
+}
+
+.filter:hover {
+  background-color: rgb(46 49 54);
+  opacity: 1;
+}
+
+.filter.active:hover {
+  filter: brightness(110%)
+}
+
+.filter.active {
+  background-color: var(--disc-blurple);
+  opacity: 1;
+}
+
 [type=button],
 [type=reset],
 [type=submit],
@@ -520,6 +542,7 @@ video {
   border-color: #e2e8f0;
   border-width: 1px;
   border-radius: .25rem;
+  border: none;
   padding: .5rem 2.5rem .5rem .75rem;
   font-size: 1rem;
   line-height: 1.5;
@@ -530,6 +553,10 @@ video {
 .form-select::-ms-expand {
   color: #a0aec0;
   border: none
+}
+
+.form-control-sm {
+  height: calc(1.8125rem + 2px);
 }
 
 @media not print {
@@ -1031,6 +1058,11 @@ print and (-ms-high-contrast:none) {
   border-bottom-right-radius: .5rem
 }
 
+.rounded-b-lg {
+  border-bottom-right-radius: .5rem;
+  border-bottom-left-radius: .5rem
+}
+
 .border-0 {
   border-width: 0
 }
@@ -1219,6 +1251,16 @@ print and (-ms-high-contrast:none) {
   line-height: 1.25
 }
 
+.my-1 {
+  margin-top: .5rem;
+  margin-bottom: .5rem
+}
+
+.my-2 {
+  margin-top: 1rem;
+  margin-bottom: 1rem
+}
+
 .my-6 {
   margin-top: 1.5rem;
   margin-bottom: 1.5rem
@@ -1248,7 +1290,7 @@ print and (-ms-high-contrast:none) {
 }
 
 .mt-2 {
-  margin-top: .5rem
+  margin-top: 1rem
 }
 
 .mr-2 {
@@ -1259,8 +1301,16 @@ print and (-ms-high-contrast:none) {
   margin-bottom: .5rem
 }
 
+.mb-3 {
+  margin-bottom: 1.5rem
+}
+
 .ml-2 {
   margin-left: .5rem
+}
+
+.ml-8 {
+  margin-left: 2rem
 }
 
 .mr-3 {
@@ -1299,6 +1349,10 @@ print and (-ms-high-contrast:none) {
   margin-right: 1.5rem
 }
 
+.mr-8 {
+  margin-right: 2rem
+}
+
 .mb-6 {
   margin-bottom: 1.5rem
 }
@@ -1316,7 +1370,7 @@ print and (-ms-high-contrast:none) {
 }
 
 .mt-16 {
-  margin-top: 4rem
+  margin-top: 4.5rem
 }
 
 .-mr-1 {
